@@ -66,7 +66,7 @@ http {
         #    root           /htdocs;
         #    fastcgi_pass   127.0.0.1:9000;
         #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+        #    fastcgi_param  SCRIPT_FILENAME  /htdocs$fastcgi_script_name;
         #    include        fastcgi_params;
         #}
 
