@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.7 2012/02/23 03:54:38 joel Exp $
+#	$OpenBSD: Makefile,v 1.8 2012/03/20 03:01:26 joel Exp $
 
 PROG=		snmpd
 MAN=		snmpd.8 snmpd.conf.5
@@ -6,7 +6,7 @@ SRCS=		parse.y ber.c log.c control.c snmpe.c \
 		    mps.c trap.c mib.c smi.c kroute.c snmpd.c timer.c \
 		    pf.c
 
-LDADD=		-levent -lutil
+LDADD=		-levent -lutil -lkvm
 DPADD=		${LIBEVENT} ${LIBUTIL}
 CFLAGS+=	-Wall -I${.CURDIR}
 CFLAGS+=	-Wstrict-prototypes -Wmissing-prototypes
