@@ -1,5 +1,5 @@
-/*	$Id: aldap.c,v 1.28 2011/08/28 16:37:28 aschrijver Exp $ */
-/*	$OpenBSD: aldap.c,v 1.28 2011/08/28 16:37:28 aschrijver Exp $ */
+/*	$Id: aldap.c,v 1.29 2012/03/15 03:44:46 jmatthew Exp $ */
+/*	$OpenBSD: aldap.c,v 1.29 2012/03/15 03:44:46 jmatthew Exp $ */
 
 /*
  * Copyright (c) 2008 Alexander Schrijver <aschrijver@openbsd.org>
@@ -400,7 +400,7 @@ aldap_match_attr(struct aldap_message *msg, char *inkey, char ***outvalues)
 	char **ret;
 
 	if (msg->body.search.attrs == NULL)
-		return (-1);
+		goto fail;
 
 	LDAP_DEBUG("attr", msg->body.search.attrs);
 
